language updates & minor bug on mobile
Added All languages minus chinese
Fixed the landing page on mobile.

--- a/assets/global/css/main.css
+++ b/assets/global/css/main.css
@@ -1,7 +1,6 @@
 /* main.css
 ======================================= */
 
-
 body
 {
 	font-family: 'Open Sans', 'Trebuchet MS', Helvetica, sans-serif;
@@ -15,12 +14,17 @@ body
 	-webkit-font-smoothing: antialiased;
 	
 	
-	background-image: url('../img/background.jpg');
+	background-image: url('../img/background-mobile.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 }
 
+@media (min-width:1024px) {
+	body {
+		background-image: url('../img/background.jpg');
+	}
+}
 html {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -64,7 +68,7 @@ body.lang-cn
 .mobile-bg-cover {
 	background-color:#000;	
 	display:block;
-	margin-top: 0;
+	margin-top: 60px; 
 	@media (min-width: 375px) {
 	}
 	@media (min-width: 1024px) {
