--- a/assets_min/global/css/main.css
+++ b/assets_min/global/css/main.css
@@ -10,10 +10,14 @@ body {
   background-color: #000;
   height: 100%;
   -webkit-font-smoothing: antialiased;
-  background-image: url("../img/background.jpg");
+  background-image: url("../img/background-mobile.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed; }
+
+@media (min-width: 1024px) {
+  body {
+    background-image: url("../img/background.jpg"); } }
 
 html {
   box-sizing: border-box;
@@ -45,7 +49,7 @@ body.lang-cn {
 .mobile-bg-cover {
   background-color: #000;
   display: block;
-  margin-top: 0; }
+  margin-top: 60px; }
   @media (min-width: 1024px) {
     .mobile-bg-cover {
       margin-top: 45%; } }
